[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Sprites/Varinha Velha.png" type="Texture" id=1]
[ext_resource path="res://Assets/Actor/Weapon.gd" type="Script" id=2]

[node name="Weapon" type="Node2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 135, 0 )
rotation = 0.785398
texture = ExtResource( 1 )

[node name="FirePoint" type="Position2D" parent="."]
position = Vector2( 240, -7.5 )

[node name="FireDirection" type="Position2D" parent="."]
position = Vector2( 250, -7.5 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true
